# task-manager-api

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.services.yml  docker-compose.test.yml  docker-compose.yml  mypy.ini  pyproject.toml  test_multilingual_categories.py  test_russian_categories.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml  dependency-check.yml  release.yml
alembic/: env.py
alembic/versions/: 5f2381e69034_create_initial_tables.py  987099a9f639_add_username_unique_constraint.py
docs/: AUTH_GUIDE.md  CI_CD_SETUP.md  DB.erd  DEV_TOOLS_SETUP.md  GITHUB_ACTIONS.md  LOCAL_DEVELOPMENT.md  README.md  SWAGGER_DOCUMENTATION.md  TASKS_API.md  TASKS_SECURITY.md  TESTING.md
scripts/: ci-check.sh  run-migrations.sh
src/: app.py  config.py  database.py
src/auth/: jwt.py
src/models/: __init__.py  base.py  category.py  task.py  user.py
src/repositories/: __init__.py  category_repository.py  task_repository.py  user_repository.py
src/routers/: __init__.py  auth.py  categories.py  tasks.py  token.py  users.py
src/schemas/: __init__.py  category.py  errors.py  task.py  token.py  user.py
src/services/: __init__.py  auth_service.py  category_service.py  task_service.py
src/utils/: __init__.py  password.py
tests/: __init__.py  conftest.py  test_categories.py  test_categories_api.py  test_multilingual_categories.py  test_repositories.py  test_services.py  test_task_repository.py  test_task_service.py  test_task_service_security.py  test_tasks_api.py  test_tasks_security.py  test_users.py  test_utils.py
